<resources>
    <string name="app_name">Ote Rider</string>
    <string name="icon">icon</string>
    <string name="image">image</string>
    <string name="create_account">Create Account</string>
    <string name="new_here_sign_up">New here? Sign Up</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="phone_no_or_email">Phone No or Email</string>
    <string name="no_active_internet">No active internet connection</string>
    <string name="required">Required</string>
    <string name="sign_up_description">Welcome to Ote Deliveries. Please fill in your details below to create an account</string>
    <string name="kenya_phone_code">+254</string>
    <string name="phone_no_hint">e.g. 701234234</string>
    <string name="password_short">Password must be at least 8 characters</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="phone_no_required">Phone No is required</string>
    <string name="invalid_phone">Invalid Phone No</string>
    <string name="exit">Exit</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant_permission_description">Ote requires some permissions in order to serve you best. Please grant them in the next dialog.</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="pick_pickup_address">Pick Pickup Address</string>
    <string name="pick_location">Pick Location</string>
    <string name="pick_delivery_address">Pick Delivery Address</string>
    <string name="sample_place_primary_text">LakeHub</string>
    <string name="sample_place_secondary_text">Okore Road, Kisumu, Kenya</string>
    <string name="no_connection_text">Couldn\'t connect to internet</string>
    <string name="connectivity_failure_desc">Check your connection and try again</string>
    <string name="search_for_a_location">Search for a location</string>
    <string name="pickup">Pickup</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery">Delivery</string>
    <string name="stop">Stop</string>
    <string name="add_a_stop">Add a stop</string>
    <string name="motorbike">Motorbike</string>
    <string name="sample_price">ksh500.00</string>
    <string name="tuktuk">Tuktuk</string>
    <string name="three_tonne_truck">3 tonne truck</string>
    <string name="six_tonne_truck">6 tonne truck</string>
    <string name="dump_truck">Dump Truck</string>
    <string name="place_order">Place Order</string>
    <string name="what_do_you_want_delivered">What do you want delivered? *</string>
    <string name="pick_up_time_for_your_order">Pick up time for your order</string>
    <string name="as_soon_as_possible">As soon as possible</string>
    <string name="instructions">Instructions</string>
    <string name="additional_instructions">Additional instructions</string>
    <string name="do_you_have_preferred_driver_at_your_pick_up_location">Do you have preferred driver at your pick up location?</string>
    <string name="select">Select</string>
    <string name="yes_lower_case">Yes</string>
    <string name="no_lower_case">No</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="number_plate">Number Plate</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="choose">Choose</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="good_label">Good:</string>
    <string name="good">good</string>
    <string name="sample_duration">10 min</string>
    <string name="sample_distance">5 km</string>
    <string name="sample_rating_num">4.9</string>
    <string name="sacs_of_maize">Sacs of maize</string>
    <string name="tap_to_accept">Tap to accept</string>
    <string name="no_thanks">No thanks</string>
    <string name="sample_date_time">7/10/19, 12:33</string>
    <string name="sample_number_plate">KCS 234Q</string>
    <string name="sample_fee">KSH440.00</string>
</resources>
