<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_white"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_logout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_permission"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/product_sans_regular"/>

    <TextView
        android:id="@+id/tv_logout_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/grant_permission_description"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logout_title" />

    <TextView
        android:id="@+id/tvExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/exit"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvGrant"
        app:layout_constraintTop_toBottomOf="@+id/tv_logout_confirm"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorError"/>

    <TextView
        android:id="@+id/tvGrant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="Grant Permissions"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvExit"
        android:textColor="@color/colorPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>